--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,6 +1,7 @@
 <section id="profile-overview">
   <figure id="avatar">
     <img src="" alt="" />
+    <%= @avatar %>
   </figure>
   <h1>Name</h1>
   <h2>Subheading</h2>
