beginning gravar implementation

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,7 +1,6 @@
 <section id="profile-overview">
   <figure id="avatar">
-    <img src="" alt="" />
-    <%= @avatar %>
+    <img src="<%= @avatar %>" alt="" />
   </figure>
   <h1>Name</h1>
   <h2>Subheading</h2>
