--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,9 +1,9 @@
 <section id="profile-overview">
   <figure id="avatar">
-    <img src="<%= @avatar %>" alt="" />
+    <img src="<%= @avatar %>" alt="<%= @name %>" />
   </figure>
-  <h1>Name</h1>
-  <h2>Subheading</h2>
+  <h1><%= @name %></h1>
+  <h2><%= @subheading %></h2>
 </section>
 
 <section id="profile-details">
