adjusting css for avatar

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,6 +1,6 @@
 <section id="profile-overview">
   <figure id="avatar">
-    <img src="<%= @avatar %>" alt="<%= @name %>" />
+    <img height="128" width="128" src="<%= @avatar %>" alt="<%= @name %>" />
   </figure>
   <h1><%= @name %></h1>
   <h2><%= @subheading %></h2>
