integrated with google web fonts (using droid sans for now)

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,6 +15,7 @@
   <title><%= @title %></title>
 
   <!-- Include CSS -->
+  <link href='http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/style.css">
  
   <!-- Include Modernizr -->
