css styling of profile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,8 @@ figure#avatar
   padding:10px;
   border: 1px solid #dfdfdf;
   display: block;
-  width:148px;
+  width:128px;
+  height:128px;
 }
 
 #profile
