changed markup so links are part of a list, like they should be instead of just a bunch of anchor tags

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -13,14 +13,14 @@
   </section>
 </section>
 
-<section id="links">
-  <a href="<%= @twitter_url %>" alt="">Twitter</a>
-  <a href="<%= @github_url %>" alt="">Github</a>
-  <a href="<%= @linkedin_url %>" alt="">Linkedin</a>
-  <a href="<%= @forrst_url %>" alt="">Forrst</a>
-  <a href="<%= @dribble_url %>" alt="">Dribble</a>
-  <a href="<%= @foursquare_url %>" alt="">Foursquare</a>
-  <a href="<%= @gowalla_url %>" alt="">Gowalla</a>
-  <a href="<%= @facebook_url %>" alt="">Facebook</a>
-  <a href="<%= @blog_url %>" alt="">Blog</a>
-</section>
+<ul id="links">
+  <li><a href="<%= @twitter_url %>" alt="">Twitter</a></li>
+  <li><a href="<%= @github_url %>" alt="">Github</a></li>
+  <li><a href="<%= @linkedin_url %>" alt="">Linkedin</a></li>
+  <li><a href="<%= @forrst_url %>" alt="">Forrst</a></li>
+  <li><a href="<%= @dribble_url %>" alt="">Dribble</a></li>
+  <li><a href="<%= @foursquare_url %>" alt="">Foursquare</a></li>
+  <li><a href="<%= @gowalla_url %>" alt="">Gowalla</a></li>
+  <li><a href="<%= @facebook_url %>" alt="">Facebook</a></li>
+  <li><a href="<%= @blog_url %>" alt="">Blog</a></li>
+</ul>
