added a clearing div

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -7,6 +7,8 @@
     <h2><%= @subheading %></h2>
   </section>
 
+  <div style="clear:both"></div>
+
   <section id="details">
     <h2><%= @bio_heading %></h2>
     <p><%= @bio %></p>
