--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,3 +29,14 @@ figure#avatar
   width:600px;
   margin: 0px auto;
 }
+
+#links a
+{
+  weight: 40px;
+  height:40px;
+  text-indent:-1000em;
+}
+
+#links #twitter { background: url(/images/social/twitter.png); }
+#links #facebook { background: url(/images/social/facebook.png); }
+#links #linkedin { background: url(/images/social/linkedin.png); }
