--- a/views/profile.erb
+++ b/views/profile.erb
@@ -16,13 +16,13 @@
 </section>
 
 <ul id="links">
-  <li><a href="<%= @twitter_url %>" alt="">Twitter</a></li>
-  <li><a href="<%= @github_url %>" alt="">Github</a></li>
-  <li><a href="<%= @linkedin_url %>" alt="">Linkedin</a></li>
-  <li><a href="<%= @forrst_url %>" alt="">Forrst</a></li>
-  <li><a href="<%= @dribble_url %>" alt="">Dribble</a></li>
-  <li><a href="<%= @foursquare_url %>" alt="">Foursquare</a></li>
-  <li><a href="<%= @gowalla_url %>" alt="">Gowalla</a></li>
-  <li><a href="<%= @facebook_url %>" alt="">Facebook</a></li>
-  <li><a href="<%= @blog_url %>" alt="">Blog</a></li>
+  <li><a class="twitter" href="<%= @twitter_url %>" alt="">Twitter</a></li>
+  <li><a class="github" href="<%= @github_url %>" alt="">Github</a></li>
+  <li><a class="linkedin" href="<%= @linkedin_url %>" alt="">Linkedin</a></li>
+  <li><a class="forrst" href="<%= @forrst_url %>" alt="">Forrst</a></li>
+  <li><a class="dribble" href="<%= @dribble_url %>" alt="">Dribble</a></li>
+  <li><a class="foursquare" href="<%= @foursquare_url %>" alt="">Foursquare</a></li>
+  <li><a class="gowalla" href="<%= @gowalla_url %>" alt="">Gowalla</a></li>
+  <li><a class="facebook" href="<%= @facebook_url %>" alt="">Facebook</a></li>
+  <li><a class="blog" href="<%= @blog_url %>" alt="">Blog</a></li>
 </ul>
