fixed social icon image paths

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,6 @@ figure#avatar
   text-indent:-1000em;
 }
 
-#links #twitter { background: url(/images/social/twitter.png); }
-#links #facebook { background: url(/images/social/facebook.png); }
-#links #linkedin { background: url(/images/social/linkedin.png); }
+#links #twitter { background: url(/img/social/twitter.png); }
+#links #facebook { background: url(/img/social/facebook.png); }
+#links #linkedin { background: url(/img/social/linkedin.png); }
