--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,16 +1,16 @@
 <section id="profile">
   <section id="overview">
     <figure id="avatar">
-      <img src="<%= @avatar %>" alt="<%= @name %>" />
+      <img src="<%= @avatar %>" alt="<%= @title %>" />
     </figure>
-    <h1><%= @name %></h1>
-    <h2><%= @subheading %></h2>
+    <h1><%= @title %></h1>
+    <h2><%= @subtitle %></h2>
   </section>
 
   <div style="clear:both"></div>
 
   <section id="details">
-    <h2><%= @bio_heading %></h2>
+    <h2><%= @bio_title %></h2>
     <p><%= @bio %></p>
   </section>
 </section>
