--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,13 +8,13 @@ body {
 
 figure#avatar
 {
-  padding:10px;
-  border: 1px solid #dfdfdf;
+  padding:7px;
+  border: 2px solid #e3e3e3;
   display: block;
   width:128px;
   height:128px;
   float:left;
-  background: #eeeeee;  
+  background: #f3f3f3;  
   -moz-border-radius:4px;
   -webkit-border-radius:4px;
   border-radius:4px;
@@ -45,7 +45,7 @@ figure#avatar img
 {
   list-style-type: none;
   display: inline;
-}`
+}
 
 #links a
 {
