--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,8 @@ figure#avatar img
   width: 600px;
   height: 373px;
   margin: 0px auto;
+  border: 1px solid #e3e3e3;
+  padding: 15px;
 }
 
 #links
