--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,7 @@ body {
 	background: #ffffff;
 	color: #333333;
   font-family: 'Droid Sans', arial, serif;
+  margin: 0px;
 }
 
 figure#avatar
@@ -11,8 +12,8 @@ figure#avatar
   padding:7px;
   border: 2px solid #e3e3e3;
   display: block;
-  width:128px;
-  height:128px;
+  width:175px;
+  height:175px;
   float:left;
   background: #f3f3f3;  
   -moz-border-radius:4px;
@@ -30,10 +31,10 @@ figure#avatar img
 #profile
 {
   border-bottom:1px solid #dfdfdf;
-  background: -moz-linear-gradient(top, #FFFFFF 0%, #FFFFFF 78%, #F0F0F0 100%);
-  background: -webkit-gradient(linear, center top, center bottom, color-stop(0%,#FFFFFF), color-stop(78%,#FFFFFF), color-stop(100%,#F0F0F0));
-  background: -o-linear-gradient(top, #FFFFFF 0%, #FFFFFF 78%, #F0F0F0 100%);
-  background: linear-gradient(top, #FFFFFF 0%, #FFFFFF 78%, #F0F0F0 100%);
+  background: -moz-linear-gradient(top, #FFFFFF 0%, #FFFFFF 65%, #F0F0F0 100%);
+  background: -webkit-gradient(linear, center top, center bottom, color-stop(0%,#FFFFFF), color-stop(65%,#FFFFFF), color-stop(100%,#F0F0F0));
+  background: -o-linear-gradient(top, #FFFFFF 0%, #FFFFFF 65%, #F0F0F0 100%);
+  background: linear-gradient(top, #FFFFFF 0%, #FFFFFF 65%, #F0F0F0 100%);
 }
 
 #profile #overview
@@ -47,6 +48,8 @@ figure#avatar img
 {
   width:600px;
   margin: 0px auto;
+  margin-top: 40px;
+  margin-bottom: 50px;
   border-top: 1px solid #e3e3e3;
 }
 
@@ -57,11 +60,12 @@ figure#avatar img
 
 #links
 {
-  border-top:1px solid #FF8A84;
-  background: -moz-linear-gradient(top, #FE6763 0%, #FFFFFF 22%, #FFFFFF 100%);
-  background: -webkit-gradient(linear, center top, center bottom, color-stop(0%,#FF8A84), color-stop(22%,#FFFFFF), color-stop(100%,#FFFFFF));
-  background: -o-linear-gradient(top, #FE6763 0%, #FFFFFF 22%, #FFFFFF 100%);
-  background: linear-gradient(top, #FE6763 0%, #FFFFFF 22%, #FFFFFF 100%);
+  height: 128px;
+  border-top:1px solid #FFB8B5; 
+  background: -moz-linear-gradient(top, #FFE4E3 0%, #FFFFFF 36%, #FFFFFF 100%);
+  background: -webkit-gradient(linear, center top, center bottom, color-stop(0%,#FFE4E3), color-stop(36%,#FFFFFF), color-stop(100%,#FFFFFF));
+  background: -o-linear-gradient(top, #FFE4E3 0%, #FFFFFF 36%, #FFFFFF 100%);
+  background: linear-gradient(top, #FFE4E3 0%, #FFFFFF 36%, #FFFFFF 100%);
 }
 
 #links ul
