--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,15 +10,18 @@ body {
 figure#avatar
 {
   padding:7px;
-  border: 2px solid #e3e3e3;
+  border: 1px solid #e3e3e3;
   display: block;
   width:175px;
   height:175px;
   float:left;
-  background: #f3f3f3;  
+  background: #f7f7f7;  
   -moz-border-radius:4px;
   -webkit-border-radius:4px;
   border-radius:4px;
+  -moz-box-shadow:0px 0px 1px #000000;
+  -webkit-box-shadow:0px 0px 1px #000000;
+  box-shadow:0px 0px 1px #000000;
 }
 
 figure#avatar img
@@ -50,7 +53,7 @@ figure#avatar img
   margin: 0px auto;
   margin-top: 40px;
   margin-bottom: 50px;
-  border-top: 1px solid #e3e3e3;
+  border-top: 1px dashed #e3e3e3;
 }
 
 #profile h1
@@ -72,6 +75,7 @@ figure#avatar img
 {
   width:600px;
   margin: 0px auto;
+  margin-top: 25px;
 }
 
 #links ul li
