--- a/views/profile.erb
+++ b/views/profile.erb
@@ -3,8 +3,10 @@
     <figure id="avatar">
       <img src="<%= @avatar %>" alt="<%= @title %>" />
     </figure>
-    <h1><%= @title %></h1>
-    <h2><%= @subtitle %></h2>
+    <section id="info">
+      <h1><%= @title %></h1>
+      <h2><%= @subtitle %></h2>
+    </section>
   </section>
 
   <div style="clear:both"></div>
