--- a/views/login.erb
+++ b/views/login.erb
@@ -1,12 +1,11 @@
 <section id="login">
-	<form name="login-form" action="/login" method="post">
-		<dl>
-		<dt><label>Username</label></dt>
-		<dd><input type="text" name="user" /></dd>
-		<dt><label>Password</label></dt>
-		<dd><input type="password" name="pass" /></dd>
-		</dl>
-		<input type="submit" value="Login" />
-		
-	</form>
+  <form name="login-form" action="/login" method="post">
+    <dl>
+      <dt><label>Username</label></dt>
+      <dd><input type="text" name="user"></dd>
+      <dt><label>Password</label></dt>
+      <dd><input type="password" name="pass"></dd>
+    </dl>
+    <input type="submit" value="Login">
+  </form>
 </section>
