ADD: configbar partial with session checking

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,3 +1,6 @@
+<% if session[:dotme] %>
+  <%= erb :configbar %>
+<% end %>
 <section id="profile">
   <section id="overview">
     <figure id="avatar">
