basic setup form

--- a/views/setup.erb
+++ b/views/setup.erb
@@ -1,3 +1,12 @@
-<section id="setup-information">
-  <h2>Setup Page</h2>
+<section id="setup">
+	<form name="setup-form" action="/setup" method="post">
+		<dl>
+			<dt><label>Email</label></dt><dd><input type="text" name="email"></dd>
+			<dt><label>Title</label></dt><dd><input type="text" name="title"></dd>
+			<dt><label>Subtitle</label></dt><dd><input type="text" name="subtitle"></dd>
+			<dt><label>Caption</label></dt><dd><input type="text" name="caption"></dd>
+			<dt><label>Location</label></dt><dd><input type="text" name="location"></dd>
+			<dt><label>bio</label></dt><dd><textarea></textarea></dd>
+		</dl>
+	</form>
 </section>
