--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,35 +1,9 @@
 <% if @dotme %>
   <%= erb :configbar %>
 <% end %>
-<section id="profile">
-  <section id="overview">
-    <figure id="avatar">
-      <img src="<%= @avatar %>" alt="<%= @title %>" />
-    </figure>
-    <section id="info">
-      <h1><%= @title %></h1>
-      <h2><%= @subtitle %></h2>
-    </section>
-  </section>
 
-  <div style="clear:both"></div>
-
-  <section id="details">
-    <h2><%= @bio_title %></h2>
-    <p><%= @bio %></p>
-  </section>
-</section>
-
-<section id="links">
-  <ul>
-    <li><a id="twitter" href="<%= @twitter_url %>" alt="">Twitter</a></li>
-    <li><a id="github" href="<%= @github_url %>" alt="">Github</a></li>
-    <li><a id="linkedin" href="<%= @linkedin_url %>" alt="">Linkedin</a></li>
-    <li><a id="forrst" href="<%= @forrst_url %>" alt="">Forrst</a></li>
-    <li><a id="dribble" href="<%= @dribble_url %>" alt="">Dribble</a></li>
-    <li><a id="foursquare" href="<%= @foursquare_url %>" alt="">Foursquare</a></li>
-    <li><a id="gowalla" href="<%= @gowalla_url %>" alt="">Gowalla</a></li>
-    <li><a id="facebook" href="<%= @facebook_url %>" alt="">Facebook</a></li>
-    <li><a id="blog" href="<%= @blog_url %>" alt="">Blog</a></li>
-  </ul>
-</section>
+<% if @profile %>
+  <%= erb :profile %>
+<% else %>
+  <%= erb :setup %>
+<% end %>
