--- a/views/setup.erb
+++ b/views/setup.erb
@@ -6,7 +6,7 @@
 			<dt><label>Subtitle</label></dt><dd><input type="text" name="subtitle"></dd>
 			<dt><label>Caption</label></dt><dd><input type="text" name="caption"></dd>
 			<dt><label>Location</label></dt><dd><input type="text" name="location"></dd>
-			<dt><label>bio</label></dt><dd><textarea></textarea></dd>
+			<dt><label>Bio</label></dt><dd><textarea></textarea></dd>
 		</dl>
 	</form>
 </section>
