added save button to setup form

--- a/views/setup.erb
+++ b/views/setup.erb
@@ -8,5 +8,6 @@
 			<dt><label>Location</label></dt><dd><input type="text" name="location"></dd>
 			<dt><label>Bio</label></dt><dd><textarea></textarea></dd>
 		</dl>
+		<input type="submit" value="Save">
 	</form>
 </section>
