--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,16 +1,15 @@
 <section id="profile">
   <section id="overview">
     <figure id="avatar">
-      <img src="<%= @avatar %>" alt="<%= @title %>" />
+      <img src="<%= @avatar %>" alt="<%= @profile.title %>" />
     </figure>
     <section id="info">
-      <h1><%= @title %></h1>
-      <h2><%= @subtitle %></h2>
+      <h1><%= @profile.title %></h1>
+      <h2><%= @profile.subtitle %></h2>
     </section>
   </section>
   <div style="clear:both"></div>
   <section id="details">
-    <h2><%= @bio_title %></h2>
-    <p><%= @bio %></p>
+    <p><%= @profile.bio %></p>
   </section>
 </section>
