--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,9 +1,9 @@
-<!doctype html>  
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title><%= @profile.title %></title>
+  <title><%= @title %></title>
   <link href='http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/style.css">
   <!--[if lt IE 9]>
