MOD: links and session?

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,9 @@
   <% end %>
   
   <%= erb :profile %>
-  <%= erb :links %>
+  <% if @links.count > 0 %>
+    <%= erb :links %>
+  <% end %>
 <% else %>
   <%= erb :setup %>
 <% end %>
