--- a/views/links.erb
+++ b/views/links.erb
@@ -1,8 +1,8 @@
 <section id="links">
   <ul>
     <% @links.each do |link| %>
-      <% if link.link_value %>
-        <li><a id="<%= link.link_name %>" href="<%= link.link_value %>" alt=""><%= link.link_name %></a></li>
+      <% if link.url %>
+        <li><a id="<%= link.name %>" href="<%= link.url %>" alt=""><%= link.name %></a></li>
       <% end %>
     <% end %>
   </ul>
