--- a/views/links.erb
+++ b/views/links.erb
@@ -1,9 +1,11 @@
 <section id="links">
-  <ul>
-    <% @links.each do |link| %>
-      <% if link.url %>
-        <li><a id="<%= link.name %>" href="<%= link.url %>" alt=""><%= link.name %></a></li>
+  <% if @links.count > 0 %>
+    <ul>
+      <% @links.each do |link| %>
+        <% if link.url %>
+          <li><a id="<%= link.name %>" href="<%= link.url %>" alt=""><%= link.name %></a></li>
+        <% end %>
       <% end %>
-    <% end %>
-  </ul>
+    </ul>
+  <% end %>
 </section>
