--- a/views/configbar.erb
+++ b/views/configbar.erb
@@ -1,1 +1,12 @@
-CONFIG BAR
+<div id="config-bar">
+	<ul id="config-nav">
+		<li id="config-options"><a href="#">Options</a></li>
+		<li id="config-profile"><a href="#">Profile</a></li>
+		<li id="config-links"><a href="#">Links</a></li>
+	</ul>
+	
+	<ul id="config-admin">
+		<li id="logout"><a href="/logout">Logout</a></li>
+		<li id="hide"><a href="#">Hide</a></li>
+	</ul>
+</div>
