getting some very basic form markup coded

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,5 +144,21 @@ figure#avatar img
 	display: inline;
 	list-style-type: none;
 	padding-right: 20px;
+	position: relative;
+}
+
+.config-bar-menu
+{
+	position: absolute;
+	top: 2em;
+	left: 0em;
+	width: 300px;
+	height: 300px;
+	border:  1px solid #ddd;
+	display: none;
+}
+#config-nav li:hover .config-bar-menu
+{
+	display: block;
 }
 /* @end */
