--- a/views/configbar.erb
+++ b/views/configbar.erb
@@ -4,6 +4,16 @@
 			<a href="#">Options</a>
 			<section class="config-bar-menu">
 				<form action="/update" method="post">
+					<label for="option-background-color">Background Color</label>
+					<input type="text" name="option-background-color" value="">
+					<label for="option-font">Font</label>
+					<select name="option-font">
+						<option value="droid-sans">Droid Sans</option>
+					</select>
+					<label for="option-header-font-color">Header Text Color</label>
+					<input type="text" name="option-header-font-color" value="">
+					<label for="option-header-font-color">Body Text Color</label>
+					<input type="text" name="option-header-font-color" value="">
 					<input type="submit" value="Save">
 				</form>
 			</section>
@@ -12,10 +22,15 @@
 			<a href="#">Profile</a>
 			<section class="config-bar-menu">
 				<form action="/update" method="post">
+					<label for="profile-title">Title</label>
 					<input type="text" name="profile-title" value="<%= @profile.title %>">
+					<label for="profile-subtitle">Subtitle</label>
 					<input type="text" name="profile-subtitle" value="<%= @profile.subtitle %>">
+					<label for="profile-caption">Caption</label>
 					<input type="text" name="profile-caption" value="<%= @profile.caption %>">
+					<label for="profile-location">Location</label>
 					<input type="text" name="profile-location" value="<%= @profile.location %>">
+					<label for="profile-bio">Bio</label>
 					<textarea name="profile-bio"><%= @profile.bio %></textarea>
 					<input type="submit" value="Save">
 				</form>
@@ -25,6 +40,10 @@
 			<a href="#">Links</a>
 			<section class="config-bar-menu">
 				<form action="/update" method="post">
+					<% @links.each do |link| %>
+					<label for="link-<%= link.name %>"><%= link.name %></label>
+					<input type="text" name="link-<%= link.name %>" value="<%= link.url %>"> 
+					<% end %>
 					<input type="submit" value="Save">
 				</form>
 			</section>
