--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,12 +122,14 @@ figure#avatar img
 	left: 0px;
 	width:  100%;
 	border-bottom: 1px solid #ddd;
+	font-size: 1em;
+	line-height: 2.5em;
 	
 }
 
 #config-nav, #config-admin
 {
-	margin: .5em 0em;
+	margin: 0em 0em;
 }
 
 #config-nav
