--- a/views/configbar.erb
+++ b/views/configbar.erb
@@ -24,7 +24,7 @@
 							<input type="text" name="option-header-font-color" value="">
 						</li>
 						<li>
-							<input type="submit" value="Save">
+							<button type="submit">Save</button>
 						</li>
 					</ul>
 				</form>
@@ -56,7 +56,7 @@
 							<textarea name="profile-bio"><%= @profile.bio %></textarea>
 						</li>
 						<li>
-							<input type="submit" value="Save">
+							<button type="submit">Save</button>
 						</li>
 					</ul>
 				</form>
@@ -74,7 +74,7 @@
 						</li>
 						<% end %>
 						<li>
-							<input type="submit" value="Save">
+							<button type="submit">Save</button>
 						</li>
 					</ul>
 				</form>
