adding/adjusting logic and views for configbar js and css inclusion

--- a/views/configbar.erb
+++ b/views/configbar.erb
@@ -10,17 +10,23 @@
 							<input type="text" name="option-background-color" value="">
 						</li>
 						<li>
-							<label for="option-font">Font</label>
-							<select name="option-font">
+							<label for="option-font">Header Font</label>
+							<select name="option-body-font">
 								<option value="droid-sans">Droid Sans</option>
 							</select>
 						</li>
 						<li>
-							<label for="option-header-font-color">Header Text Color</label>
+							<label for="option-font">Body Font</label>
+							<select name="option-body-font">
+								<option value="droid-sans">Droid Sans</option>
+							</select>
+						</li>
+						<li>
+							<label for="option-header-font-color">Header Color</label>
 							<input type="text" name="option-header-font-color" value="">
 						</li>
 						<li>
-							<label for="option-header-font-color">Body Text Color</label>
+							<label for="option-header-font-color">Body Color</label>
 							<input type="text" name="option-header-font-color" value="">
 						</li>
 						<li>
