fixing changes so that config bar markup/css/js all show when needed

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,12 @@
 <% if @profile %>
+
   <%= erb :profile %>
   <%= erb :links %>
+  
+  <% if @dotme %>
+    <%= erb :configbar %>
+  <% end %>
+
 <% else %>
   <%= erb :setup %>
 <% end %>
