setting up click toshow instead of hover to show

--- a/views/configbar.erb
+++ b/views/configbar.erb
@@ -1,7 +1,7 @@
 <nav id="config-bar">
 	<ul id="config-nav">
 		<li id="config-options">
-			<a href="#">Options</a>
+			<a href="/options">Options</a>
 			<section class="config-bar-menu">
 				<form action="/update" method="post">
 					<ul>
@@ -37,7 +37,7 @@
 			</section>
 		</li>
 		<li id="config-profile">
-			<a href="#">Profile</a>
+			<a href="/profile">Profile</a>
 			<section class="config-bar-menu">
 				<form action="/update" method="post">
 					<ul>
@@ -69,7 +69,7 @@
 			</section>
 		</li>
 		<li id="config-links">
-			<a href="#">Links</a>
+			<a href="/links">Links</a>
 			<section class="config-bar-menu">
 				<form action="/update" method="post">
 					<ul>
