matched login and setup form markup with configbar forms markup (using uls)

--- a/views/login.erb
+++ b/views/login.erb
@@ -1,11 +1,17 @@
 <section id="login">
   <form name="login-form" action="/login" method="post">
-    <dl>
-      <dt><label>Username</label></dt>
-      <dd><input type="text" name="user"></dd>
-      <dt><label>Password</label></dt>
-      <dd><input type="password" name="pass"></dd>
-    </dl>
-    <input type="submit" value="Login">
+    <ul>
+      <li>
+        <label>Username</label></dt>
+        <input type="text" name="user">
+      </li>
+      <li>
+	    <label>Password</label></dt>
+        <input type="password" name="pass">
+      </li>
+      <li>
+        <input type="submit" value="Login">
+      </li>
+    </ul>
   </form>
 </section>
