--- a/views/setup.erb
+++ b/views/setup.erb
@@ -1,13 +1,31 @@
 <section id="setup">
 	<form name="setup-form" action="/setup" method="post">
-		<dl>
-			<dt><label>Email</label></dt><dd><input type="text" name="email"></dd>
-			<dt><label>Title</label></dt><dd><input type="text" name="title"></dd>
-			<dt><label>Subtitle</label></dt><dd><input type="text" name="subtitle"></dd>
-			<dt><label>Caption</label></dt><dd><input type="text" name="caption"></dd>
-			<dt><label>Location</label></dt><dd><input type="text" name="location"></dd>
-			<dt><label>Bio</label></dt><dd><textarea name="bio"></textarea></dd>
-		</dl>
+		<ul>
+			<li>
+				<label>Email</label>
+				<input type="text" name="email">
+			</li>
+			<li>
+				<label>Title</label>
+				<input type="text" name="title">
+			</li>
+			<li>
+				<label>Subtitle</label>
+				<input type="text" name="subtitle">
+			</li>
+			<li>
+				<label>Caption</label>
+				<input type="text" name="caption">
+			</li>
+			<li>
+				<label>Location</label>
+				<input type="text" name="location">
+			</li>
+			<li>
+				<label>Bio</label>
+				<textarea name="bio"></textarea>
+			</li>
+		</ul>
 		<input type="submit" value="Save">
 	</form>
 </section>
